Project code refactoring